--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
-/* font-family: 'Shadows Into Light', cursive; */
-
 @layer base {
     html {
         font-family:'Kanit', sans-serif;
-        background-color: "#DAE2DF";
-        color:'#E3E3E3'
+        @apply text-white bg-BabyBlueEyes/30
+    }
+    h1,h2,h3,h4,h5,h5{
+        font-family: 'Shadows Into Light', cursive; 
+    }
+}
+
+@layer components {
+    .rotateItem{
+        @apply rotate-45 transition duration-300 ease-in
     }
 }
