--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,15 +8,21 @@
 @layer base {
     html {
         font-family:'Kanit', sans-serif;
-        @apply text-white bg-BabyBlueEyes/30
+    }
+    body {
+        contain:content;
+        @apply text-white bg-BabyBlueEyes/30 scrollbar  scrollbar-thumb-black
     }
     h1,h2,h3,h4,h5,h5{
-        font-family: 'Shadows Into Light', cursive; 
+        font-family: 'Shadows Into Light', cursive;
     }
 }
 
 @layer components {
     .rotateItem{
         @apply rotate-45 transition duration-300 ease-in
+    }
+    .divLine{
+        @apply border-[3px] w-10 my-1 transform duration-300 ease-out transition
     }
 }
