--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,4 +28,7 @@
     .input{
         @apply rotate-1 bg-Lavender-Blue rounded-xl  focus:border-none focus:outline-none border-none text-DarkBlueGray mb-4 w-full h-12 focus:ring-2 focus:ring-Blue-Gray caret-Blue-Gray
     }
+    .imageProfile {
+        @apply w-11 h-11 -rotate-12 rounded-xl
+    }
 }
