--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@
         @apply border-[3px] w-10 my-1 transform duration-300 ease-out transition
     }
     .input{
-        @apply rotate-1 bg-Lavender-Blue/30 rounded-xl focus:border-4 focus:border-DarkBlueGray focus:outline-none focus:ring-0 border-4 border-Blue-Gray text-BlueDarker mt-1 mb-4 w-full h-12 caret-Blue-Gray
+        @apply rotate-1 bg-Lavender-Blue rounded-xl focus:border-4 focus:border-Blue-Gray focus:outline-none focus:ring-0 border-4 border-Blue-Gray text-BlueDarker mt-1 mb-4 w-full h-12 caret-Blue-Gray
     }
     .imageProfile {
         @apply w-11 h-11 xl:w-14 xl:h-14 border -rotate-12 even:rotate-12 rounded-xl cursor-pointer overflow-hidden bg-white/30 
