--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,4 +47,7 @@
     .saveOrPublish{
         @apply cursor-pointer lg:hover:bg-white lg:hover:border-green-500 lg:hover:text-green-500 ease-in-out duration-300 transform
     }
+    .skeletonLoading{
+        @apply shadow z-0 before:absolute before:inset-0 before:-translate-x-full before:bg-gradient-to-r before:from-transparent before:via-white/20 before:animate-[shimmer_1.5s_infinite]
+    }
 }
