Fixed redirect in createYourNew component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
         @apply text-white bg-BabyBlueEyes/30 scrollbar-thin scrollbar-thumb-rounded-lg scrollbar-track-transparent scrollbar-thumb-DarkBlueGray;
         @apply overflow-x-hidden scroll-smooth
     }
-    h1,h2,h3,h4,h5{
+    h1,h2,h3,h4,h5,h6{
         font-family: 'Kalam', cursive;
     }
 }
