--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam&family=Kanit:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,12 +10,9 @@
         box-sizing: border-box;
     }
     html {
-        font-family:Kanit, sans-serif;
+        font-family: 'Lato' , sans-serif;
         @apply text-white bg-BabyBlueEyes/30 scrollbar-thin scrollbar-thumb-rounded-lg scrollbar-track-transparent scrollbar-thumb-DarkBlueGray;
         @apply overflow-x-hidden scroll-smooth
-    }
-    h1,h2,h3,h4,h5,h6{
-        font-family: 'Kalam', cursive;
     }
 }
 
